--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
-ale + david = chulis 4 ever
-<div>
+<main>
+  <h1>ale + david = chulis 4 ever</h1>
   <img src="../assets/nutria.jpg" alt="" />
-</div>
+  <footer>
+    I
+    <lord-icon
+      src="https://cdn.lordicon.com/jjoolpwc.json"
+      trigger="loop"
+      delay="2000"
+      style="width: 50px; height: 50px"
+    >
+    </lord-icon>
+    you
+  </footer>
+</main>
