feat: add carta

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,4 +93,75 @@
   </audio>
 </main>
 
-<dialog id="carta">carta</dialog>
+<dialog id="carta" class="flex flex-col gap-3 rounded-xl p-8 text-sm">
+  <button (click)="closeCarta()" class="absolute right-2 top-2">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      width="30"
+      height="30"
+      viewBox="0 0 256 256"
+    >
+      <path
+        fill="currentColor"
+        d="M205.66 194.34a8 8 0 0 1-11.32 11.32L128 139.31l-66.34 66.35a8 8 0 0 1-11.32-11.32L116.69 128L50.34 61.66a8 8 0 0 1 11.32-11.32L128 116.69l66.34-66.35a8 8 0 0 1 11.32 11.32L139.31 128Z"
+      />
+    </svg>
+  </button>
+  <h2 class="font-semibold">Para mi Chulis:</h2>
+  <p>
+    Quien me diria que estaría escribiendo una carta de mesiversario este año. Y
+    si me hubieran dicho que seria para conmemorar ser novios con Ale Lascurain
+    hubiera dicho de que me hablas bueno fuera jaja. Y aquí estoy escribiendo
+    esta cartita donde planeo expresar mis sentimientos después de un mes de ser
+    novios.
+  </p>
+
+  <p>
+    Eres la niña mas hermosa que mis ojos han visto y que fortuna la mía que me
+    mires con esos ojos tan bonitos llenos de amor. Que bendición poder llamarte
+    mi novia y eso solo cambiaria por otra palabra que empieza por E.
+  </p>
+
+  <p>
+    Dios me toco a través de ti, como diría Emmanuel. Siento que estoy completo
+    y una felicidad que no había experimentado. De verdad que siento que contigo
+    a mi lado puedo llegar a mi potencial como persona. Siento que contigo a mi
+    lado todo es posible y disfruto demasiado de esta vida.
+  </p>
+
+  <p>
+    Yo se que he tenido momentos de inquietud y tal vez has dudado de mi paz
+    mental con el tema del futuro. Pero quiero que sepas que son momentos
+    efímeros en esta tan bonita relación y estoy seguro que se acabaron. Quiero
+    que tengas muy claro que quiero estar presente en tu vida en todos los
+    aspectos. Quiero que me puedas considerar tu mejor amigo y poder tocar
+    cualquier tema, y quiero que sientas que soy tu mayor fan, porque en verdad
+    te admiro demasiado.
+  </p>
+
+  <p>
+    Espero lograr que sientas esa paz y tranquilidad a mi lado y que tengas
+    claro que puedes contarme lo que sea y contar con mi apoyo.
+  </p>
+
+  <p>
+    Es impresionante como no hay dates malas ni regulares contigo, en todas me
+    la paso demasiado bien y siento una conexión que no había sentido. Eres mi
+    bffis 4 life y estoy ansioso de vivir todas las experiencias que nos faltan.
+  </p>
+
+  <p>
+    Así que solo me queda decirte que disfrutemos de esta tan bonita relación
+    que la vida y Dios nos han permitido vivir. De mi lado pienso disfrutar este
+    presente tan espectacular que vivo y planear con emoción un futuro a tu
+    lado.
+  </p>
+
+  <p>
+    Muchísimas gracias por aceptarme en tu vida, eres lo mas bonito que tengo y
+    estoy sumamente agradecido con la vida por ponerte en mi camino
+  </p>
+
+  <p>Y desde lo mas honesto y profundo de mi corazón te digo Te amo</p>
+  <footer>David</footer>
+</dialog>
