--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,23 @@
 <main class="flex flex-col gap-3 p-8">
   <h1 class="text-center font-semibold">ale + david = chulis 4 ever</h1>
-  <button
-    (click)="openCarta()"
-    class="grid place-content-center focus:outline-none"
-  >
-    <img class="h-20 rounded-lg object-cover" src="../assets/nutria.jpg" />
-  </button>
+  <div class="flex w-full items-center justify-center gap-3">
+    <div class="flex flex-col text-sm text-gray-600">
+      click here
+      <lord-icon
+        src="https://cdn.lordicon.com/iagdobvi.json"
+        trigger="loop"
+        colors="primary:#242424,secondary:#9cc2f4"
+        style="width: 30px; height: 30px"
+      >
+      </lord-icon>
+    </div>
+    <button
+      (click)="openCarta()"
+      class="grid place-content-center focus:outline-none"
+    >
+      <img class="h-20 rounded-lg object-cover" src="../assets/nutria.jpg" />
+    </button>
+  </div>
   <h2 class="text-center text-gray-700">¡Feliz mesiversario!</h2>
   <swiper-container speed="500" loop="true" class="w-full">
     <swiper-slide>
@@ -162,6 +174,7 @@
     estoy sumamente agradecido con la vida por ponerte en mi camino
   </p>
 
-  <p>Y desde lo mas honesto y profundo de mi corazón te digo Te amo</p>
+  <p>Y desde lo mas honesto y profundo de mi corazón te digo</p>
+  <h4 class="font-semibold text-red-700">Te amo</h4>
   <footer>David</footer>
 </dialog>
